# bootcamp_py_aula_07

./: README.md  desafio.py  exercicio_01.py  pyproject.toml  vendas.csv
