[tool.poetry]
name = "bootcamp-py-aula-07"
version = "0.1.0"
description = "Jornada de Dados. Bootcamp Python. Aula 07."
authors = ["Greg Oliveira <gregoryomelo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.5"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.1.0"
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
autopep8 = "^2.3.2"
pydocstyle = "^6.3.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
